--- a/resource/GstImageGC1.rc
+++ b/resource/GstImageGC1.rc
@@ -344,3 +344,20 @@ GC_ID_CARD_HINT_12 BITMAP "..\\bmp\\gc_id_card_hint_12.bmp"
 GC_ID_CARD_HINT_16 BITMAP "..\\bmp\\gc_id_card_hint_16.bmp"
 GC_FLOPPY_DISK_12 BITMAP "..\\bmp\\gc_floppy_disk_12.bmp"
 GC_FLOPPY_DISK_16 BITMAP "..\\bmp\\gc_floppy_disk_16.bmp"
+
+
+
+GC_MONITOR_16 BITMAP "..\\bmp\\gc_monitor_16.bmp"
+GC_MONITOR_32 BITMAP "..\\bmp\\gc_monitor_32.bmp"
+GC_SPREADSHEET_CELL_16 BITMAP "..\\bmp\\gc_spreadsheet_cell_16.bmp"
+GC_SPREADSHEET_CELL_32 BITMAP "..\\bmp\\gc_spreadsheet_cell_32.bmp"
+GC_DOCUMENT_TEXT_LOCK_16 BITMAP "..\\bmp\\gc_document_text_lock_16.bmp"
+GC_DOCUMENT_TEXT_LOCK_32 BITMAP "..\\bmp\\gc_document_text_lock_32.bmp"
+GC_SET_SQUARE_PENCIL_16 BITMAP "..\\bmp\\gc_set_square_pencil_16.bmp"
+GC_SET_SQUARE_PENCIL_32 BITMAP "..\\bmp\\gc_set_square_pencil_32.bmp"
+GC_DOCUMENT_TEXT_DELETE_16 BITMAP "..\\bmp\\gc_document_text_delete_16.bmp"
+GC_DOCUMENT_TEXT_DELETE_32 BITMAP "..\\bmp\\gc_document_text_delete_32.bmp"
+GC_FUNNEL_16 BITMAP "..\\bmp\\gc_funnel_16.bmp"
+GC_FUNNEL_32 BITMAP "..\\bmp\\gc_funnel_32.bmp"
+GC_FOLDER_DOCUMENT_16 BITMAP "..\\bmp\\gc_folder_document_16.bmp"
+GC_FOLDER_DOCUMENT_32 BITMAP "..\\bmp\\gc_folder_document_32.bmp"
