--- a/resource/GstImageGC1.rc
+++ b/resource/GstImageGC1.rc
@@ -109,6 +109,7 @@ GC_FOLDERS2_16 BITMAP "..\\bmp\\gc_folders2_16.bmp"
 GC_FOLDERS2_32 BITMAP "..\\bmp\\gc_folders2_32.bmp"
 GC_FIND_REPLACE_16 BITMAP "..\\bmp\\gc_find_replace_16.bmp"
 GC_FIND_REPLACE_32 BITMAP "..\\bmp\\gc_find_replace_32.bmp"
+GC_FORM_PLUS2_12 BITMAP "..\\bmp\\gc_form_plus2_12.bmp"
 GC_FORM_PLUS2_16 BITMAP "..\\bmp\\gc_form_plus2_16.bmp"
 GC_FORM_PLUS2_32 BITMAP "..\\bmp\\gc_form_plus2_32.bmp"
 GC_NOTEBOOK2_16 BITMAP "..\\bmp\\gc_notebook2_16.bmp"
