--- a/resource/GstImageGC1.rc
+++ b/resource/GstImageGC1.rc
@@ -415,3 +415,4 @@ GC_USER_TELEPHONE_24 BITMAP "..\\bmp\\gc_user_telephone_24.bmp"
 GC_MAIL_EARTH_24 BITMAP "..\\bmp\\gc_mail_earth_24.bmp"
 
 GC_SAFE_INTO_64 BITMAP "..\\bmp\\gc_safe_into_64.bmp"
+GC_DOCUMENT_TEXT_USER_48 BITMAP "..\\bmp\\gc_document_text_user_48.bmp"
