--- a/resource/GstImageGC1.rc
+++ b/resource/GstImageGC1.rc
@@ -311,7 +311,10 @@ CNT16 BITMAP "..\\bmp\\gc_delete_12.bmp"
 GC_LOCK2_12 BITMAP "..\\bmp\\gc_lock2_12.bmp"
 GC_LOCK2_16 BITMAP "..\\bmp\\gc_lock2_16.bmp"
 ZOOM16 BITMAP "..\\bmp\\gc_lock2_16.bmp"
-CHGPRE16 BITMAP "..\\bmp\\gc_money2_16.bmp"
+
+GC_MONEY2_16 BITMAP "..\\bmp\\gc_money2_16.bmp"
+MONEY2_32 BITMAP "..\\bmp\\Money2_32.bmp"
+
 GC_CHECK_12 BITMAP "..\\bmp\\gc_check_12.bmp"
 GC_DELETE_12 BITMAP "..\\bmp\\gc_delete_12.bmp"
 GC_SHAPE_SQUARE_12 BITMAP "..\\bmp\\GC_SHAPE_SQUARE_12.bmp"
@@ -368,7 +371,7 @@ STOPWATCH_STOP_32 BITMAP "..\\bmp\\gc_clock_stop_32.bmp"
 GC_CLOCK_PLAY_16 BITMAP "..\\bmp\\gc_clock_play_16.bmp"
 GC_CLOCK_PLAY_32 BITMAP "..\\bmp\\gc_clock_play_32.bmp"
 PREV116 BITMAP "..\\bmp\\gc_monitor_16.bmp"
-CHGSTATE16 BITMAP "..\\bmp\\gc_objects_exchange_16.bmp"
+CHGSTATE16 BITMAP "..\\bmp\\gc_trafficlight_on_16.bmp"
 BFILTER16 BITMAP "..\\bmp\\gc_funnel_16.bmp"
 NEW16 BITMAP "..\\bmp\\gc_plus2_16.bmp"
 NEW32 BITMAP "..\\bmp\\gc_plus2_32.bmp"
@@ -418,3 +421,10 @@ GC_SAFE_INTO_64 BITMAP "..\\bmp\\gc_safe_into_64.bmp"
 GC_DOCUMENT_TEXT_USER_48 BITMAP "..\\bmp\\gc_document_text_user_48.bmp"
 
 GC_DOCUMENT_TEXT_USER_48 BITMAP "..\\bmp\\gc_document_text_user_48.bmp"
+
+GC_DOCUMENT_WHITE_16 BITMAP "..\\bmp\\gc_document_white_16.bmp"
+
+DOCUMENT_USER1_32 BITMAP "..\\bmp\\document_user1_32.bmp"
+MONEY2_BUSINESSMAN_32 BITMAP "..\\bmp\\Money2_businessman_32.bmp"
+
+
