--- a/resource/GstImageGC1.rc
+++ b/resource/GstImageGC1.rc
@@ -426,5 +426,6 @@ GC_DOCUMENT_WHITE_16 BITMAP "..\\bmp\\gc_document_white_16.bmp"
 
 DOCUMENT_USER1_32 BITMAP "..\\bmp\\document_user1_32.bmp"
 MONEY2_BUSINESSMAN_32 BITMAP "..\\bmp\\Money2_businessman_32.bmp"
+GC_UNDO_16 BITMAP "..\\bmp\\gc_undo_16.bmp"
 
 
