--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -4327,7 +4327,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Web a exportar", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 77, 426, 26
   CONTROL "Web", -1, "Static", WS_GROUP, 54, 90, 21, 8
   CONTROL "Procesos en curso", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 44, 106, 426, 234
-  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 136, 85, 328, 89
+  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 136, 85, 328, 89
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
