--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -7,19 +7,18 @@
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-ACTEMPRESA DIALOG DISCARDABLE 31, 110, 365, 98
+ACTEMPRESA DIALOG DISCARDABLE 31, 110, 411, 119
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_THICKFRAME|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Apertura de sesión"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Actualización completa", 120, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 35, 86, 12
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 259, 68, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 314, 68, 50, 14
-  CONTROL "", 110, "Static", SS_CENTER|WS_GROUP, 0, 87, 365, 11
-  CONTROL "", 100, "TAnimat", 0x00800000, 0, 49, 364, 8
-  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 0, 0, 365, 34
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 1, 61, 364, 3
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 32, 398, 2
+  CONTROL "Actualización completa", 120, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 29, 86, 12
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 303, 62, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 358, 62, 50, 14
+  CONTROL "", 110, "Static", SS_CENTER|WS_GROUP, 44, 92, 365, 11
+  CONTROL "", 100, "TAnimat", 0x00800000, 44, 43, 364, 8
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Durante este proceso se actulizarán las estructuras de la empresa", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 365, 8
 }
 
 ACTUALIZACOSTOS DIALOG DISCARDABLE -157, -139, 434, 163
