--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -27,5 +27,5 @@ GC_ADDRESS_BOOK_48 BITMAP "..\\bmp\\gc_address_book_48.bmp"
 GC_CENTRAL_BANK_EURO_48 BITMAP "..\\bmp\\gc_central_bank_euro_48.bmp"
 GC_MESSAGE_48 BITMAP "..\\bmp\\gc_message_48.bmp"
 GC_FOLDERS_48 BITMAP "..\\bmp\\gc_folders_48.bmp"
-
-
+GC_EYE_48 BITMAP "..\\bmp\\gc_eye_48.bmp"
+GC_CHART_COLUMN_48 BITMAP "..\\bmp\\gc_chart_column_48.bmp"
