--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -29,7 +29,7 @@ GC_MESSAGE_48 BITMAP "..\\bmp\\gc_message_48.bmp"
 GC_FOLDERS_48 BITMAP "..\\bmp\\gc_folders_48.bmp"
 GC_EYE_48 BITMAP "..\\bmp\\gc_eye_48.bmp"
 GC_CHART_COLUMN_48 BITMAP "..\\bmp\\gc_chart_column_48.bmp"
-
 SIGN_WARNING_12 BITMAP "..\\bmp\\sign_warning_12.bmp"
 GC_CLOCK_12 BITMAP "..\\bmp\\gc_clock_12.bmp"
-GC_FOLDER_OPEN_CHECK_12 BITMAP "..\\bmp\\GC_FOLDER_OPEN_CHECK_12.bmp"
+GC_FOLDER_OPEN_CHECK_12 BITMAP "..\\bmp\\gc_folder_open_check_12.bmp"
+GC_PORTABLE_BARCODE_SCANNER_48 BITMAP "..\\bmp\\gc_portable_barcode_scanner_48.bmp"
