--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -33,3 +33,4 @@ SIGN_WARNING_12 BITMAP "..\\bmp\\sign_warning_12.bmp"
 GC_CLOCK_12 BITMAP "..\\bmp\\gc_clock_12.bmp"
 GC_FOLDER_OPEN_CHECK_12 BITMAP "..\\bmp\\gc_folder_open_check_12.bmp"
 GC_PORTABLE_BARCODE_SCANNER_48 BITMAP "..\\bmp\\gc_portable_barcode_scanner_48.bmp"
+GC_ARROW_CIRCLE2_48 BITMAP "..\\bmp\\gc_arrow_circle2_48.bmp"
