--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -34,3 +34,9 @@ GC_CLOCK_12 BITMAP "..\\bmp\\gc_clock_12.bmp"
 GC_FOLDER_OPEN_CHECK_12 BITMAP "..\\bmp\\gc_folder_open_check_12.bmp"
 GC_PORTABLE_BARCODE_SCANNER_48 BITMAP "..\\bmp\\gc_portable_barcode_scanner_48.bmp"
 GC_ARROW_CIRCLE2_48 BITMAP "..\\bmp\\gc_arrow_circle2_48.bmp"
+GC_CLOCK_REFRESH_48 BITMAP "..\\bmp\\gc_clock_refresh_48.bmp"
+GC_CLOCK_STOP_48 BITMAP "..\\bmp\\gc_clock_stop_48.bmp"
+
+clock_run_48_alpha BITMAP "..\\bmp\\clock_run_48_alpha.bmp"
+clock_stop_48_alpha BITMAP "..\\bmp\\clock_stop_48_alpha.bmp"
+clock_refresh_48_alpha BITMAP "..\\bmp\\clock_refresh_48_alpha.bmp"
