--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -45,3 +45,5 @@ FOLDER BITMAP "..\\bmp\\gc_folder_open_16.bmp"
 BOT BITMAP "..\\bmp\\gc_arrow_down_16.bmp"
 BMPKIT BITMAP "..\\bmp\\gc_piece_16.bmp"
 GC_PIECE_12 BITMAP "..\\bmp\\gc_piece_12.bmp"
+GC_BOX_CLOSED_48 BITMAP "..\\bmp\\gc_box_closed_48.bmp"
+GC_CLIPBOARD_CHECK_EDIT_48 BITMAP "..\\bmp\\gc_clipboard_check_edit_48.bmp"
