--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -47,3 +47,11 @@ BMPKIT BITMAP "..\\bmp\\gc_piece_16.bmp"
 GC_PIECE_12 BITMAP "..\\bmp\\gc_piece_12.bmp"
 GC_BOX_CLOSED_48 BITMAP "..\\bmp\\gc_box_closed_48.bmp"
 GC_CLIPBOARD_CHECK_EDIT_48 BITMAP "..\\bmp\\gc_clipboard_check_edit_48.bmp"
+GC_CREDIT_CARDS_24 BITMAP "..\\bmp\\gc_credit_cards_24.bmp"
+GC_CREDIT_CARDS_32 BITMAP "..\\bmp\\gc_credit_cards_32.bmp"
+GC_MONEYBAG_EURO_24 BITMAP "..\\bmp\\GC_MONEYBAG_EURO_24.bmp"
+GC_SYMBOL_PERCENT_24 BITMAP "..\\bmp\\GC_SYMBOL_PERCENT_24.bmp"
+GC_SHOPPING_BASKET_32 BITMAP "..\\bmp\\gc_shopping_basket_32.bmp"
+GC_SHOPPING_BASKET_24 BITMAP "..\\bmp\\gc_shopping_basket_24.bmp"
+GC_SHOPPING_BASKET_16 BITMAP "..\\bmp\\gc_shopping_basket_16.bmp"
+GC_FOLDER_MONEY_48 BITMAP "..\\bmp\\gc_folder_money_48.bmp"
