--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -55,3 +55,7 @@ GC_SHOPPING_BASKET_32 BITMAP "..\\bmp\\gc_shopping_basket_32.bmp"
 GC_SHOPPING_BASKET_24 BITMAP "..\\bmp\\gc_shopping_basket_24.bmp"
 GC_SHOPPING_BASKET_16 BITMAP "..\\bmp\\gc_shopping_basket_16.bmp"
 GC_FOLDER_MONEY_48 BITMAP "..\\bmp\\gc_folder_money_48.bmp"
+GC_CLIPBOARD_EMPTY_BUSINESSMAN_48 BITMAP "..\\bmp\\gc_clipboard_empty_businessman_48.bmp"
+GC_INFORMATION_48 BITMAP "..\\bmp\\gc_information_48.bmp"
+GC_PRINTER2_48 BITMAP "..\\bmp\\gc_printer2_48.bmp"
+GC_SHOPPING_CART_48 BITMAP "..\\bmp\\gc_shopping_cart_48.bmp"
