--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -62,3 +62,6 @@ GC_SHOPPING_CART_48 BITMAP "..\\bmp\\gc_shopping_cart_48.bmp"
 GC_DOCUMENT_EMPTY_48 BITMAP "..\\bmp\\gc_document_empty_48.bmp"
 GC_MAIL_EARTH_48 BITMAP "..\\bmp\\gc_mail_earth_48.bmp"
 GC_DOCUMENT_TEXT_BUSINESSMAN_48 BITMAP "..\\bmp\\gc_document_text_businessman_48.bmp"
+GC_MONEY2_48 BITMAP "..\\bmp\\gc_money2_48.bmp"
+GC_MONEY2_DELETE_48 BITMAP "..\\bmp\\gc_money2_delete_48.bmp"
+GC_DOCUMENT_TEXT_BLUE_48 BITMAP "..\\bmp\\gc_document_text_blue_48.bmp"
