--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -68,3 +68,14 @@ GC_DOCUMENT_TEXT_BLUE_48 BITMAP "..\\bmp\\gc_document_text_blue_48.bmp"
 GC_BUSINESSMAN2_48 BITMAP "..\\bmp\\gc_businessman2_48.bmp"
 GC_PACKAGE_PENCIL_48 BITMAP "..\\bmp\\gc_package_pencil_48.bmp"
 GC_WORKER2_48 BITMAP "..\\bmp\\gc_worker2_48.bmp"
+GC_INDUSTRIAL_ROBOT_48 BITMAP "..\\bmp\\gc_industrial_robot_48.bmp"
+GC_DOCUMENT_TEXT_WORKER_48 BITMAP "..\\bmp\\gc_document_text_worker_48.bmp"
+GC_FOLDER_DOCUMENT_48 BITMAP "..\\bmp\\gc_folder_document_48.bmp"
+TABLE BITMAP "..\\bmp\\gc_spreadsheet_cell_16.bmp"
+
+GC_SPREADSHEET_SUM_16 BITMAP "..\\bmp\\gc_spreadsheet_sum_16.bmp"
+GC_TABLE_SELECTION_ALL_16 BITMAP "..\\bmp\\gc_table_selection_all_16.bmp"
+GC_TABLE_16 BITMAP "..\\bmp\\gc_table_16.bmp"
+GC_TABLE_SELECTION_COLUMN_16 BITMAP "..\\bmp\\gc_table_selection_column_16.bmp"
+GC_TABLE_SELECTION_COLUMN_DISK_16 BITMAP "..\\bmp\\gc_table_selection_column_disk_16.bmp"
+GC_USERS3_48 BITMAP "..\\bmp\\gc_users3_48.bmp"
