--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -79,3 +79,14 @@ GC_TABLE_16 BITMAP "..\\bmp\\gc_table_16.bmp"
 GC_TABLE_SELECTION_COLUMN_16 BITMAP "..\\bmp\\gc_table_selection_column_16.bmp"
 GC_TABLE_SELECTION_COLUMN_DISK_16 BITMAP "..\\bmp\\gc_table_selection_column_disk_16.bmp"
 GC_USERS3_48 BITMAP "..\\bmp\\gc_users3_48.bmp"
+GC_USER2_48 BITMAP "..\\bmp\\gc_user2_48.bmp"
+GC_MONEYBAG_EURO_48 BITMAP "..\\bmp\\gc_moneybag_euro_48.bmp"
+GC_DOCUMENT_TEXT_GEAR_48 BITMAP "..\\bmp\\gc_document_text_gear_48.bmp"
+GC_SIGNPOST3_48 BITMAP "..\\bmp\\gc_signpost3_48.bmp"
+GC_SIGN_WARNING_48 BITMAP "..\\bmp\\gc_sign_warning_48.bmp"
+GC_USER_TELEPHONE_48 BITMAP "..\\bmp\\gc_user_telephone_48.bmp"
+GC_FORM_EARTH_48 BITMAP "..\\bmp\\gc_form_earth_48.bmp"
+GC_FORM_PLUS2_48 BITMAP "..\\bmp\\gc_form_plus2_48.bmp"
+GC_SYMBOL_PERCENT_48 BITMAP "..\\bmp\\gc_symbol_percent_48.bmp"
+GC_ID_CARD_48 BITMAP "..\\bmp\\gc_id_card_48.bmp"
+GC_POWER_DRILL_SAT_USER_48 BITMAP "..\\bmp\\gc_power_drill_sat_user_48.bmp"
