--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -90,3 +90,4 @@ GC_FORM_PLUS2_48 BITMAP "..\\bmp\\gc_form_plus2_48.bmp"
 GC_SYMBOL_PERCENT_48 BITMAP "..\\bmp\\gc_symbol_percent_48.bmp"
 GC_ID_CARD_48 BITMAP "..\\bmp\\gc_id_card_48.bmp"
 GC_POWER_DRILL_SAT_USER_48 BITMAP "..\\bmp\\gc_power_drill_sat_user_48.bmp"
+GC_NOTEBOOK_USER_48 BITMAP "..\\bmp\\gc_notebook_user_48.bmp"
