--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -91,3 +91,4 @@ GC_SYMBOL_PERCENT_48 BITMAP "..\\bmp\\gc_symbol_percent_48.bmp"
 GC_ID_CARD_48 BITMAP "..\\bmp\\gc_id_card_48.bmp"
 GC_POWER_DRILL_SAT_USER_48 BITMAP "..\\bmp\\gc_power_drill_sat_user_48.bmp"
 GC_NOTEBOOK_USER_48 BITMAP "..\\bmp\\gc_notebook_user_48.bmp"
+GC_DOCUMENT_ATTACHMENT_48 BITMAP "..\\bmp\\gc_document_attachment_48.bmp"
