--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -92,3 +92,4 @@ GC_ID_CARD_48 BITMAP "..\\bmp\\gc_id_card_48.bmp"
 GC_POWER_DRILL_SAT_USER_48 BITMAP "..\\bmp\\gc_power_drill_sat_user_48.bmp"
 GC_NOTEBOOK_USER_48 BITMAP "..\\bmp\\gc_notebook_user_48.bmp"
 GC_DOCUMENT_ATTACHMENT_48 BITMAP "..\\bmp\\gc_document_attachment_48.bmp"
+GC_CLIPBOARD_EMPTY_USER_48 BITMAP "..\\bmp\\gc_clipboard_empty_user_48.bmp"
