--- a/resource/Gstimage2.rc
+++ b/resource/Gstimage2.rc
@@ -20,10 +20,8 @@ FOLDER_GEAR_16 BITMAP "..\\bmp\\Folder_Gear_16.bmp"
 
 DOCUMENT_ATTACHMENT_32 BITMAP "..\\bmp\\Document_Attachment_32.bmp"
 DOCUMENT_ATTACHMENT_16 BITMAP "..\\bmp\\Document_Attachment_16.bmp"
-WINDOW_DELETE_16 BITMAP "..\\bmp\\Window_Delete_16.bmp"
 MDA_16 BITMAP "..\\bmp\\Mda_16.bmp"
 EMPTY_16 BITMAP "..\\bmp\\Empty_16.bmp"
-BELL_16 BITMAP "..\\bmp\\Bell_16.bmp"
 DATA_CONNECTION_16 BITMAP "..\\bmp\\data_connection_16.bmp"
 BALERT BITMAP "..\\bmp\\warning_16.bmp"
 Warning_16 BITMAP "..\\bmp\\warning_16.bmp"
@@ -51,7 +49,6 @@ OFFICE_BUILDING_16 BITMAP "..\\bmp\\Factory_16.bmp"
 OFFICE_BUILDING_32 BITMAP "..\\bmp\\Factory_32.bmp"
 
 
-STOPWATCH_16 BITMAP "..\\bmp\\stopwatch_16.bmp"
 STOPWATCH_32 BITMAP "..\\bmp\\stopwatch_32.bmp"
 FOLDER_CUBES_COLOR_16 BITMAP "..\\bmp\\Folder_Cubes_Color_16.bmp"
 FOLDER_CUBES_COLOR_32 BITMAP "..\\bmp\\Folder_Cubes_Color_32.bmp"
@@ -64,7 +61,6 @@ TAPE_MEASURE2_16 BITMAP "..\\bmp\\Tape_Measure2_16.bmp"
 TAPE_MEASURE2_32 BITMAP "..\\bmp\\Tape_Measure2_32.bmp"
 POTION_RED_16 BITMAP "..\\bmp\\Potion_Red_16.bmp"
 POTION_RED_32 BITMAP "..\\bmp\\Potion_Red_32.bmp"
-MONEY_ENVELOPE_16 BITMAP "..\\bmp\\Money_Envelope_16.bmp"
 INDEX_16 BITMAP "..\\bmp\\Index_16.bmp"
 INDEX_32 BITMAP "..\\bmp\\Index_32.bmp"
 STAR_RED_16 BITMAP "..\\bmp\\Star_Red_16.bmp"
@@ -95,7 +91,6 @@ GRPPRV_32 BITMAP "..\\bmp\\Users3_32.bmp"
 CURRENCY_EURO_32 BITMAP "..\\bmp\\Currency_Euro_32.bmp"
 PAGINATOR_32 BITMAP "..\\bmp\\Paginator_32.bmp"
 
-PACKAGE_16 BITMAP "..\\bmp\\Package_16.bmp"
 PACKAGE_32 BITMAP "..\\bmp\\Package_32.bmp"
 PACKAGE_48 BITMAP "..\\bmp\\Package_48.bmp"
 
@@ -114,12 +109,9 @@ ADDRESS_BOOK2_16 BITMAP "..\\bmp\\Address_Book2_16.bmp"
 ADDRESS_BOOK2_32 BITMAP "..\\bmp\\Address_Book2_32.bmp"
 CAMERA_16 BITMAP "..\\bmp\\Camera_16.bmp"
 CAMERA_32 BITMAP "..\\bmp\\Camera_32.bmp"
-CLIPBOARD_EMPTY_MONEY_16 BITMAP "..\\bmp\\Clipboard_empty_money_16.bmp"
-DOCUMENT_PLAIN_MONEY_16 BITMAP "..\\bmp\\Document_plain_money_16.bmp"
 CLIPBOARD_EMPTY_BUSINESSMAN_32 BITMAP "..\\bmp\\Clipboard_empty_businessman_32.bmp"
 
 
-DOCUMENT_NAVIGATE_CROSS_16 BITMAP "..\\bmp\\Document_navigate_cross_16.bmp"
 DOCUMENT_NAVIGATE_CROSS_32 BITMAP "..\\bmp\\Document_navigate_cross_32.bmp"
 
 DOCUMENT_INTO_16 BITMAP "..\\bmp\\Document_Into_16.bmp"
@@ -135,7 +127,6 @@ PACKAGE_ADD_32 BITMAP "..\\bmp\\Package_add_32.bmp"
 PACKAGE_OK_32 BITMAP "..\\bmp\\Package_ok_32.bmp"
 PACKAGE_PREFERENCES_16 BITMAP "..\\bmp\\Package_preferences_16.bmp"
 PACKAGE_PREFERENCES_32 BITMAP "..\\bmp\\Package_preferences_32.bmp"
-NOTEBOOK_USER1_16 BITMAP "..\\bmp\\Notebook_user1_16.bmp"
 NOTEBOOK_USER1_32 BITMAP "..\\bmp\\Notebook_user1_32.bmp"
 CLIPBOARD_EMPTY_USER1_32 BITMAP "..\\bmp\\Clipboard_empty_user1_32.bmp"
 DOCUMENT_PLAIN_USER1_32 BITMAP "..\\bmp\\Document_plain_user1_32.bmp"
@@ -144,21 +135,13 @@ DOCUMENT_USER1_32 BITMAP "..\\bmp\\document_user1_32.bmp"
 MONEY_ENVELOPE_USER1_16 BITMAP "..\\bmp\\Money_envelope_user1_16.bmp"
 DOCUMENT_MONEY2_16 BITMAP "..\\bmp\\Document_money2_16.bmp"
 DOCUMENT_MONEY2_32 BITMAP "..\\bmp\\Document_money2_32.bmp"
-DOCUMENT_DELETE_16 BITMAP "..\\bmp\\Document_Delete_16.bmp"
 DOCUMENT_DELETE_32 BITMAP "..\\bmp\\Document_Delete_32.bmp"
 BRIEFCASE_16 BITMAP "..\\bmp\\Briefcase_16.bmp"
-BRIEFCASE_USER1_16 BITMAP "..\\bmp\\Briefcase_user1_16.bmp"
 BRIEFCASE_USER1_32 BITMAP "..\\bmp\\Briefcase_user1_32.bmp"
-BRIEFCASE_DOCUMENT_16 BITMAP "..\\bmp\\Briefcase_document_16.bmp"
 BRIEFCASE_DOCUMENT_32 BITMAP "..\\bmp\\Briefcase_document_32.bmp"
-TRUCK_BLUE_DOCUMENT_16 BITMAP "..\\bmp\\Truck_blue_document_16.bmp"
 TRUCK_BLUE_DOCUMENT_32 BITMAP "..\\bmp\\Truck_blue_document_32.bmp"
-TRUCK_RED_16 BITMAP "..\\bmp\\Truck_red_16.bmp"
 CASHIER_USER1_32 BITMAP "..\\bmp\\Cashier_user1_32.bmp"
-CASHIER_HAND_POINT_16 BITMAP "..\\bmp\\Cashier_hand_point_16.bmp"
 CASHIER_HAND_POINT_32 BITMAP "..\\bmp\\Cashier_hand_point_32.bmp"
-CASHIER_REPLACE_16 BITMAP "..\\bmp\\Cashier_replace_16.bmp"
-CASHIER_REPLACE_32 BITMAP "..\\bmp\\Cashier_replace_32.bmp"
 
 DOCUMENT_EDIT_16 BITMAP "..\\bmp\\Document_edit_16.bmp"
 DOCUMENT_EDIT_32 BITMAP "..\\bmp\\Document_edit_32.bmp"
@@ -173,13 +156,10 @@ WINDOW_EDIT_16 BITMAP "..\\bmp\\Window_edit_16.bmp"
 WINDOW_EDIT_32 BITMAP "..\\bmp\\Window_edit_32.bmp"
 REPLACE_16 BITMAP "..\\bmp\\Replace_16.bmp"
 REPLACE_32 BITMAP "..\\bmp\\Replace_32.bmp"
-SATELLITE_DISH_16 BITMAP "..\\bmp\\Satellite_dish_16.bmp"
 SATELLITE_DISH_32 BITMAP "..\\bmp\\Satellite_dish_32.bmp"
-PDA_16 BITMAP "..\\bmp\\Pda_16.bmp"
 PDA_32 BITMAP "..\\bmp\\Pda_32.bmp"
 BUSINESSMEN_16 BITMAP "..\\bmp\\Businessmen_16.bmp"
 BUSINESSMEN_32 BITMAP "..\\bmp\\Businessmen_32.bmp"
-SHIELD_16 BITMAP "..\\bmp\\Shield_16.bmp"
 SHIELD_32 BITMAP "..\\bmp\\Shield_32.bmp"
 NOTE_16 BITMAP "..\\bmp\\Note_16.bmp"
 NOTE_32 BITMAP "..\\bmp\\Note_32.bmp"
@@ -221,7 +201,7 @@ BADDFILTER16 BITMAP "..\\bmp\\Funnel_Add_16.bmp"
 BAL_EURO32 BITMAP "..\\bmp\\Currency_Euro_32.bmp"
 SNDINT32 BITMAP "..\\bmp\\Earth_32.bmp"
 BMPCONTA32 BITMAP "..\\bmp\\Folder2_red_32.bmp"
-SATELLITE16 BITMAP "..\\bmp\\Satellite_dish_16.bmp"
+SATELLITE16 BITMAP "..\\bmp\\gc_satellite_dish2_16.bmp"
 SEND16 BITMAP "..\\bmp\\Satellite_16.bmp"
 SEND32 BITMAP "..\\bmp\\Nav_up_green_32.bmp"
 XSatellite16 BITMAP "..\\bmp\\Satellite_16.bmp"
