--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -109,3 +109,6 @@ GC_DOCUMENT_EMPTY_USER_48 BITMAP "..\\bmp\\gc_document_empty_user_48.bmp"
 GC_GEARWHEEL_16 BITMAP "..\\bmp\\gc_gearwheel_16.bmp"
 GC_DOCUMENT_TEXT_MONEY2_48 BITMAP "..\\bmp\\gc_document_text_money2_48.bmp"
 GC_DOCUMENT_TEXT_USER2_48 BITMAP "..\\bmp\\gc_document_text_user2_48.bmp"
+GC_DOCUMENT_TEXT_DELETE_48 BITMAP "..\\bmp\\gc_document_text_delete_48.bmp"
+GC_DOCUMENT_TEXT_CHECK_16 BITMAP "..\\bmp\\gc_document_text_check_16.bmp"
+GC_SMALL_TRUCK_USER_48 BITMAP "..\\bmp\\gc_small_truck_user_48.bmp"
