--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -112,3 +112,15 @@ GC_DOCUMENT_TEXT_USER2_48 BITMAP "..\\bmp\\gc_document_text_user2_48.bmp"
 GC_DOCUMENT_TEXT_DELETE_48 BITMAP "..\\bmp\\gc_document_text_delete_48.bmp"
 GC_DOCUMENT_TEXT_CHECK_16 BITMAP "..\\bmp\\gc_document_text_check_16.bmp"
 GC_SMALL_TRUCK_USER_48 BITMAP "..\\bmp\\gc_small_truck_user_48.bmp"
+GC_BRIEFCASE2_DOCUMENT_48 BITMAP "..\\bmp\\gc_briefcase2_document_48.bmp"
+GC_FLOPPY_DISK_48 BITMAP "..\\bmp\\gc_floppy_disk_48.bmp"
+GC_BRIEFCASE2_AGENT_48 BITMAP "..\\bmp\\gc_briefcase2_agent_48.bmp"
+GC_SPEECH_BALLOON_ANSWER2_32 BITMAP "..\\bmp\\gc_speech_balloon_answer2_32.bmp"
+GC_PENCIL__32 BITMAP "..\\bmp\\gc_pencil__32.bmp"
+GC_CASH_DELETE_32 BITMAP "..\\bmp\\gc_cash_delete_32.bmp"
+GC_CASH_SCROLL_32 BITMAP "..\\bmp\\gc_cash_scroll_32.bmp"
+GC_CASH_STOP_32 BITMAP "..\\bmp\\gc_cash_stop_32.bmp"
+GC_CASH_MONEY_32 BITMAP "..\\bmp\\gc_cash_money_32.bmp"
+GC_ARROW_UP_32 BITMAP "..\\bmp\\gc_arrow_up_32.bmp"
+GC_ARROW_DOWN_32 BITMAP "..\\bmp\\GC_ARROW_DOWN_32.bmp"
+END32 BITMAP "..\\bmp\\gc_door_open2_32.bmp"
