--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -124,3 +124,5 @@ GC_CASH_MONEY_32 BITMAP "..\\bmp\\gc_cash_money_32.bmp"
 GC_ARROW_UP_32 BITMAP "..\\bmp\\gc_arrow_up_32.bmp"
 GC_ARROW_DOWN_32 BITMAP "..\\bmp\\GC_ARROW_DOWN_32.bmp"
 END32 BITMAP "..\\bmp\\gc_door_open2_32.bmp"
+GC_HOME_16 BITMAP "..\\bmp\\gc_home_16.bmp"
+GC_MOBILE_PHONE_16 BITMAP "..\\bmp\\gc_mobile_phone_16.bmp"
