--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -125,4 +125,16 @@ GC_ARROW_UP_32 BITMAP "..\\bmp\\gc_arrow_up_32.bmp"
 GC_ARROW_DOWN_32 BITMAP "..\\bmp\\GC_ARROW_DOWN_32.bmp"
 END32 BITMAP "..\\bmp\\gc_door_open2_32.bmp"
 GC_HOME_16 BITMAP "..\\bmp\\gc_home_16.bmp"
+GC_HOME_32 BITMAP "..\\bmp\\gc_home_32.bmp"
 GC_MOBILE_PHONE_16 BITMAP "..\\bmp\\gc_mobile_phone_16.bmp"
+GC_MOTOR_SCOOTER_32 BITMAP "..\\bmp\\gc_motor_scooter_32.bmp"
+GC_PRINTER2_SCROLL_32 BITMAP "..\\bmp\\gc_printer2_scroll_32.bmp"
+GC_CASHDRAWER_32 BITMAP "..\\bmp\\gc_cashdrawer_32.bmp"
+GC_USERS_FAMILY_32 BITMAP "..\\bmp\\gc_users_family_32.bmp"
+GC_NOTE_BLOCK_32 BITMAP "..\\bmp\\gc_note_block_32.bmp"
+GC_GAUGE_32 BITMAP "..\\bmp\\gc_gauge_32.bmp"
+GC_BEER_GARDEN_TABLE_32 BITMAP "..\\bmp\\gc_beer_garden_table_32.bmp"
+GC_BEER_GARDEN_TABLE_CUT_32 BITMAP "..\\bmp\\gc_beer_garden_table_cut_32.bmp"
+UP32 BITMAP "..\\bmp\\gc_arrow_up_32.bmp"
+DOWN32 BITMAP "..\\bmp\\gc_arrow_down_32.bmp"
+GC_BARCODE_32 BITMAP "..\\bmp\\gc_barcode_32.bmp"
