--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -138,3 +138,10 @@ GC_BEER_GARDEN_TABLE_CUT_32 BITMAP "..\\bmp\\gc_beer_garden_table_cut_32.bmp"
 UP32 BITMAP "..\\bmp\\gc_arrow_up_32.bmp"
 DOWN32 BITMAP "..\\bmp\\gc_arrow_down_32.bmp"
 GC_BARCODE_32 BITMAP "..\\bmp\\gc_barcode_32.bmp"
+GC_KEYBOARD_32 BITMAP "..\\bmp\\gc_keyboard_32.bmp"
+GC_KEYBOARD_WIRELESS_32 BITMAP "..\\bmp\\gc_keyboard_wireless_32.bmp"
+GC_GARBAGE_FULL_32 BITMAP "..\\bmp\\gc_garbage_full_32.bmp"
+GC_NAVIGATE_UP2A_32 BITMAP "..\\bmp\\gc_navigate_up2a_32.bmp"
+GC_NAVIGATE_DOWN2A_32 BITMAP "..\\bmp\\gc_navigate_down2a_32.bmp"
+GC_CHECK_32 BITMAP "..\\bmp\\gc_check_32.bmp"
+GC_MONEY2_64 BITMAP "..\\bmp\\gc_money2_64.bmp"
