--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -145,3 +145,5 @@ GC_NAVIGATE_UP2A_32 BITMAP "..\\bmp\\gc_navigate_up2a_32.bmp"
 GC_NAVIGATE_DOWN2A_32 BITMAP "..\\bmp\\gc_navigate_down2a_32.bmp"
 GC_CHECK_32 BITMAP "..\\bmp\\gc_check_32.bmp"
 GC_MONEY2_64 BITMAP "..\\bmp\\gc_money2_64.bmp"
+GC_TEXT_TREE_32 BITMAP "..\\bmp\\gc_text_tree_32.bmp"
+GC_MORE_32 BITMAP "..\\bmp\\gc_more_32.bmp"
