--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -147,3 +147,5 @@ GC_CHECK_32 BITMAP "..\\bmp\\gc_check_32.bmp"
 GC_MONEY2_64 BITMAP "..\\bmp\\gc_money2_64.bmp"
 GC_TEXT_TREE_32 BITMAP "..\\bmp\\gc_text_tree_32.bmp"
 GC_MORE_32 BITMAP "..\\bmp\\gc_more_32.bmp"
+GC_PIN_32 BITMAP "..\\bmp\\gc_pin_32.bmp"
+GC_PIN_BLUE_32 BITMAP "..\\bmp\\gc_pin_blue_32.bmp"
