--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -149,3 +149,4 @@ GC_TEXT_TREE_32 BITMAP "..\\bmp\\gc_text_tree_32.bmp"
 GC_MORE_32 BITMAP "..\\bmp\\gc_more_32.bmp"
 GC_PIN_32 BITMAP "..\\bmp\\gc_pin_32.bmp"
 GC_PIN_BLUE_32 BITMAP "..\\bmp\\gc_pin_blue_32.bmp"
+GC_SCALES_32 BITMAP "..\\bmp\\gc_scales_32.bmp"
