--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -150,3 +150,24 @@ GC_MORE_32 BITMAP "..\\bmp\\gc_more_32.bmp"
 GC_PIN_32 BITMAP "..\\bmp\\gc_pin_32.bmp"
 GC_PIN_BLUE_32 BITMAP "..\\bmp\\gc_pin_blue_32.bmp"
 GC_SCALES_32 BITMAP "..\\bmp\\gc_scales_32.bmp"
+GC_SCALES_16 BITMAP "..\\bmp\\gc_scales_16.bmp"
+GC_BEER_BOTTLE_32 BITMAP "..\\bmp\\gc_beer_bottle_32.bmp"
+GC_BEER_BOTTLE_16 BITMAP "..\\bmp\\gc_beer_bottle_16.bmp"
+GC_BEER_GLASS_32 BITMAP "..\\bmp\\gc_beer_glass_32.bmp"
+GC_BEER_GLASS_16 BITMAP "..\\bmp\\gc_beer_glass_16.bmp"
+GC_WINE_BOTTLE_32 BITMAP "..\\bmp\\gc_beer_bottle_32.bmp"
+GC_WINE_BOTTLE_16 BITMAP "..\\bmp\\gc_beer_bottle_16.bmp"
+GC_WINE_GLASS_32 BITMAP "..\\bmp\\gc_wine_glass_32.bmp"
+GC_WINE_GLASS_16 BITMAP "..\\bmp\\gc_wine_glass_16.bmp"
+GC_COCKTAIL2_32 BITMAP "..\\bmp\\gc_cocktail2_32.bmp"
+GC_COCKTAIL2_16 BITMAP "..\\bmp\\gc_cocktail2_16.bmp"
+GC_LEMONADE_GLASS_32 BITMAP "..\\bmp\\gc_lemonade_glass_32.bmp"
+GC_LEMONADE_GLASS_16 BITMAP "..\\bmp\\gc_lemonade_glass_16.bmp"
+GC_COCKTAIL_32 BITMAP "..\\bmp\\gc_cocktail_32.bmp"
+GC_COCKTAIL_16 BITMAP "..\\bmp\\gc_cocktail_16.bmp"
+GC_ICE_CREAM2_32 BITMAP "..\\bmp\\gc_ice_cream2_32.bmp"
+GC_ICE_CREAM2_16 BITMAP "..\\bmp\\gc_ice_cream2_16.bmp"
+GC_GOLDFISH_32 BITMAP "..\\bmp\\gc_goldfish_32.bmp"
+GC_GOLDFISH_16 BITMAP "..\\bmp\\gc_goldfish_16.bmp"
+GC_PIG_32 BITMAP "..\\bmp\\gc_pig_32.bmp"
+GC_PIG_16 BITMAP "..\\bmp\\gc_pig_16.bmp"
