--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -155,8 +155,8 @@ GC_BEER_BOTTLE_32 BITMAP "..\\bmp\\gc_beer_bottle_32.bmp"
 GC_BEER_BOTTLE_16 BITMAP "..\\bmp\\gc_beer_bottle_16.bmp"
 GC_BEER_GLASS_32 BITMAP "..\\bmp\\gc_beer_glass_32.bmp"
 GC_BEER_GLASS_16 BITMAP "..\\bmp\\gc_beer_glass_16.bmp"
-GC_WINE_BOTTLE_32 BITMAP "..\\bmp\\gc_beer_bottle_32.bmp"
-GC_WINE_BOTTLE_16 BITMAP "..\\bmp\\gc_beer_bottle_16.bmp"
+GC_WINE_BOTTLE_32 BITMAP "..\\bmp\\gc_wine_bottle_32.bmp"
+GC_WINE_BOTTLE_16 BITMAP "..\\bmp\\gc_wine_bottle_16.bmp"
 GC_WINE_GLASS_32 BITMAP "..\\bmp\\gc_wine_glass_32.bmp"
 GC_WINE_GLASS_16 BITMAP "..\\bmp\\gc_wine_glass_16.bmp"
 GC_COCKTAIL2_32 BITMAP "..\\bmp\\gc_cocktail2_32.bmp"
@@ -171,3 +171,19 @@ GC_GOLDFISH_32 BITMAP "..\\bmp\\gc_goldfish_32.bmp"
 GC_GOLDFISH_16 BITMAP "..\\bmp\\gc_goldfish_16.bmp"
 GC_PIG_32 BITMAP "..\\bmp\\gc_pig_32.bmp"
 GC_PIG_16 BITMAP "..\\bmp\\gc_pig_16.bmp"
+GC_MOTOR_SCOOTER_48 BITMAP "..\\bmp\\gc_motor_scooter_48.bmp"
+GC_USER2_EDIT_32 BITMAP "..\\bmp\\gc_user2_edit_32.bmp"
+GC_USER2_ADD_32 BITMAP "..\\bmp\\gc_user2_add_32.bmp"
+GC_PRINTER2_OK_32 BITMAP "..\\bmp\\gc_printer2_ok_32.bmp"
+GC_PRINTER2_DELETE_32 BITMAP "..\\bmp\\gc_printer2_delete_32.bmp"
+GC_PRINTER2_SUN_32 BITMAP "..\\bmp\\GC_PRINTER2_SUN_32.bmp"
+GC_NOTE_BLOCK_DELETE_32 BITMAP "..\\bmp\\gc_note_block_delete_32.bmp"
+GC_NAVIGATE_LINE_UP_32 BITMAP "..\\bmp\\gc_navigate_line_up_32.bmp"
+GC_NAVIGATE_LINE_DOWN_32 BITMAP "..\\bmp\\gc_navigate_line_down_32.bmp"
+GC_TABLE_SELECTION_ROW_32 BITMAP "..\\bmp\\gc_table_selection_row_32.bmp"
+GC_TABLE_SELECTION_ALL_32 BITMAP "..\\bmp\\gc_table_selection_all_32.bmp"
+GC_NAVIGATE_PLUS_32 BITMAP "..\\bmp\\gc_navigate_plus_32.bmp"
+GC_NAVIGATE_MINUS_32 BITMAP "..\\bmp\\gc_navigate_minus_32.bmp"
+GC_USER2_32 BITMAP "..\\bmp\\gc_user2_32.bmp"
+GC_BUSINESSMAN2_50 BITMAP "..\\bmp\\gc_businessman2_50.bmp"
+GC_USER2_50 BITMAP "..\\bmp\\GC_USER2_50.bmp"
