--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -17021,32 +17021,33 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
 
-REINDEX DIALOG DISCARDABLE 92, 84, 386, 228
+REINDEX DIALOG DISCARDABLE 92, 84, 461, 228
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_VISIBLE
 CAPTION "Regeneración de índices"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Ficheros de sistema", 100, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 44, 75, 10
-  CONTROL "Ficheros maestros", 101, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 66, 75, 10
-  CONTROL "Ficheros de trabajo", 102, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 88, 75, 10
-  CONTROL "Ficheros T.P.V.", 103, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 110, 75, 10
-  CONTROL "Riesgo de clientes", 104, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 132, 75, 10
-  CONTROL "Sincroniza información", 105, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 4, 154, 84, 10
-  CONTROL "&Todos", 500, "Button", WS_TABSTOP, 4, 206, 50, 14
-  CONTROL "&Ninguno", 501, "Button", WS_TABSTOP, 59, 206, 50, 14
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 224, 206, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 279, 206, 50, 14
-  CONTROL "A&yuda", 998, "Button", WS_TABSTOP, 334, 206, 50, 14
-  CONTROL "Proceso en curso", -1, "Button", BS_GROUPBOX, 2, 176, 382, 22
+  CONTROL "Ficheros de sistema", 100, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 44, 75, 10
+  CONTROL "Ficheros maestros", 101, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 66, 75, 10
+  CONTROL "Ficheros de trabajo", 102, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 88, 75, 10
+  CONTROL "Ficheros T.P.V.", 103, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 110, 75, 10
+  CONTROL "Riesgo de clientes", 104, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 132, 75, 10
+  CONTROL "Sincroniza información", 105, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 154, 84, 10
+  CONTROL "&Todos", 500, "Button", WS_TABSTOP, 44, 206, 50, 14
+  CONTROL "&Ninguno", 501, "Button", WS_TABSTOP, 101, 206, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 263, 206, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 320, 206, 50, 14
+  CONTROL "A&yuda", 998, "Button", WS_TABSTOP, 376, 206, 50, 14
+  CONTROL "Proceso en curso", -1, "Button", BS_GROUPBOX, 44, 176, 379, 22
   CONTROL "", 110, "Static", SS_CENTER|WS_GROUP, 4, 187, 378, 8
-  CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 0, 0, 386, 34
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 32, 386, 1
-  CONTROL "", 200, "msctls_progress32", 0x00000000, 4, 56, 378, 6
-  CONTROL "", 210, "msctls_progress32", 0x00000000, 4, 78, 378, 6
-  CONTROL "", 220, "msctls_progress32", 0x00000000, 4, 100, 378, 6
-  CONTROL "", 230, "msctls_progress32", 0x00000000, 4, 122, 378, 6
-  CONTROL "", 240, "msctls_progress32", 0x00000000, 4, 144, 378, 6
-  CONTROL "", 250, "msctls_progress32", 0x00000000, 4, 166, 378, 6
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 47, 41, 352, 1
+  CONTROL "", 200, "msctls_progress32", 0x00000000, 44, 56, 378, 6
+  CONTROL "", 210, "msctls_progress32", 0x00000000, 44, 78, 378, 6
+  CONTROL "", 220, "msctls_progress32", 0x00000000, 44, 100, 378, 6
+  CONTROL "", 230, "msctls_progress32", 0x00000000, 44, 122, 378, 6
+  CONTROL "", 240, "msctls_progress32", 0x00000000, 44, 144, 378, 6
+  CONTROL "", 250, "msctls_progress32", 0x00000000, 44, 166, 378, 6
+  CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Durante este proceso se eliminarán definitivamente los registros marcados y se ordenarán nuevamente todas las bases de datos de la aplicaión.", -1, "Static", WS_GROUP, 44, 3, 339, 27
 }
 
 REINDEXADS DIALOG DISCARDABLE 92, 84, 386, 228
