--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -201,7 +201,6 @@ GC_TICKET_RED_16 BITMAP "..\\bmp\\gc_ticket_red_16.bmp"
 GC_SIGN_FORBIDDEN_16 BITMAP "..\\bmp\\gc_sign_forbidden_16.bmp"
 GC_EXPORT2_16 BITMAP "..\\bmp\\gc_export2_16.bmp"
 GC_IMPORT_16 BITMAP "..\\bmp\\gc_import_16.bmp"
-
 GC_NOTEBOOK2_48 BITMAP "..\\bmp\\gc_notebook2_48.bmp"
-
 GC_PACKAGE_PRINTER_64 BITMAP "..\\bmp\\gc_package_printer_64.bmp"
+GC_RECYCLE_48 BITMAP "..\\bmp\\gc_recycle_48.bmp"
