--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -204,3 +204,6 @@ GC_IMPORT_16 BITMAP "..\\bmp\\gc_import_16.bmp"
 GC_NOTEBOOK2_48 BITMAP "..\\bmp\\gc_notebook2_48.bmp"
 GC_PACKAGE_PRINTER_64 BITMAP "..\\bmp\\gc_package_printer_64.bmp"
 GC_RECYCLE_48 BITMAP "..\\bmp\\gc_recycle_48.bmp"
+GC_SHIELD_48 BITMAP "..\\bmp\\gc_shield_48.bmp"
+GC_IMPORT_48 BITMAP "..\\bmp\\gc_import_48.bmp"
+GC_PDA_WRITE_48 BITMAP "..\\bmp\\gc_pda_write_48.bmp"
