--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -207,3 +207,5 @@ GC_RECYCLE_48 BITMAP "..\\bmp\\gc_recycle_48.bmp"
 GC_SHIELD_48 BITMAP "..\\bmp\\gc_shield_48.bmp"
 GC_IMPORT_48 BITMAP "..\\bmp\\gc_import_48.bmp"
 GC_PDA_WRITE_48 BITMAP "..\\bmp\\gc_pda_write_48.bmp"
+GC_MAGIC_WAND_48 BITMAP "..\\bmp\\gc_magic_wand_48.bmp"
+GC_PACKAGE BITMAP "..\\bmp\\gc_package_32.bmp"
