--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -209,3 +209,7 @@ GC_IMPORT_48 BITMAP "..\\bmp\\gc_import_48.bmp"
 GC_PDA_WRITE_48 BITMAP "..\\bmp\\gc_pda_write_48.bmp"
 GC_MAGIC_WAND_48 BITMAP "..\\bmp\\gc_magic_wand_48.bmp"
 GC_PACKAGE BITMAP "..\\bmp\\gc_package_32.bmp"
+GC_STAR2_DELETE_32 BITMAP "..\\bmp\\gc_star2_delete_32.bmp"
+GC_STAR2_ADD_32 BITMAP "..\\bmp\\gc_star2_add_32.bmp"
+GC_STAR2_EDIT_32 BITMAP "..\\bmp\\gc_star2_edit_32.bmp"
+GC_FLASH_32 BITMAP "..\\bmp\\gc_flash_32.bmp"
