--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -21100,3 +21100,20 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Quitar", 280, "Button", WS_TABSTOP, 154, 34, 50, 14
 }
 
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH
+
+SET_CONTADORES DIALOG DISCARDABLE 30, 84, 164, 91
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Contadores"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Serie", -1, "Static", WS_GROUP, 44, 29, 24, 8
+  CONTROL "Contador", -1, "Static", WS_GROUP, 44, 42, 33, 8
+  CONTROL "&Aceptar", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 47, 70, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 102, 70, 50, 14
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Establecer contadores", -1, "Static", WS_GROUP, 44, 3, 120, 8
+  CONTROL "", 4001, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 111, 26, 40, 143
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 88, 40, 63, 12
+}
+
