--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -213,6 +213,6 @@ GC_STAR2_DELETE_32 BITMAP "..\\bmp\\gc_star2_delete_32.bmp"
 GC_STAR2_ADD_32 BITMAP "..\\bmp\\gc_star2_add_32.bmp"
 GC_STAR2_EDIT_32 BITMAP "..\\bmp\\gc_star2_edit_32.bmp"
 GC_FLASH_32 BITMAP "..\\bmp\\gc_flash_32.bmp"
-
+GC_DOCUMENT_TEXT_PENCIL_16 BITMAP "..\\bmp\\gc_document_text_pencil_16.bmp"
 GC_OBJECT_CUBE_PRINTER_64 BITMAP "..\\bmp\\gc_object_cube_printer_64.bmp"
 GC_USER_PRINTER_64 BITMAP "..\\bmp\\gc_user_printer_64.bmp"
