--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -216,3 +216,4 @@ GC_FLASH_32 BITMAP "..\\bmp\\gc_flash_32.bmp"
 GC_DOCUMENT_TEXT_PENCIL_16 BITMAP "..\\bmp\\gc_document_text_pencil_16.bmp"
 GC_OBJECT_CUBE_PRINTER_64 BITMAP "..\\bmp\\gc_object_cube_printer_64.bmp"
 GC_USER_PRINTER_64 BITMAP "..\\bmp\\gc_user_printer_64.bmp"
+GC_PHOTOGRAPHIC_FILTERS_48 BITMAP "..\\bmp\\GC_PHOTOGRAPHIC_FILTERS_48.bmp"
