--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -216,4 +216,9 @@ GC_FLASH_32 BITMAP "..\\bmp\\gc_flash_32.bmp"
 GC_DOCUMENT_TEXT_PENCIL_16 BITMAP "..\\bmp\\gc_document_text_pencil_16.bmp"
 GC_OBJECT_CUBE_PRINTER_64 BITMAP "..\\bmp\\gc_object_cube_printer_64.bmp"
 GC_USER_PRINTER_64 BITMAP "..\\bmp\\gc_user_printer_64.bmp"
-GC_PHOTOGRAPHIC_FILTERS_48 BITMAP "..\\bmp\\GC_PHOTOGRAPHIC_FILTERS_48.bmp"
+GC_PHOTOGRAPHIC_FILTERS_48 BITMAP "..\\bmp\\gc_photographic_filters_48.bmp"
+
+GC_MOTOR_SCOOTER_160 BITMAP "..\\bmp\\gc_motor_scooter_160.bmp"
+GC_SHOPPING_BASKET_160 BITMAP "..\\bmp\\gc_shopping_basket_160.bmp"
+GC_NOTEBOOK2_160 BITMAP "..\\bmp\\GC_NOTEBOOK2_160.bmp"
+GC_CASH_REGISTER_160 BITMAP "..\\bmp\\gc_cash_register_160.bmp"
