mostrar stock por almacén con opción de programa

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5657,7 +5657,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 126, 102, 61, 12
   CONTROL "", 121, "Edit", ES_UPPERCASE|WS_BORDER|WS_TABSTOP, 189, 102, 237, 12
   CONTROL "Seleccionar almacén", 122, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 126, 116, 81, 10
-  CONTROL "Filtrar stock en ventas por almacén", 123, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 126, 128, 128, 10
+  CONTROL "Filtrar stock por almacén", 123, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 126, 128, 91, 10
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 126, 141, 61, 12
   CONTROL "", 131, "Edit", ES_UPPERCASE|WS_BORDER|WS_TABSTOP, 189, 141, 237, 12
   CONTROL "", 135, "Edit", WS_BORDER|WS_TABSTOP, 126, 154, 61, 12
