--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -42,6 +42,7 @@ clock_stop_48_alpha BITMAP "..\\bmp\\clock_stop_48_alpha.bmp"
 clock_refresh_48_alpha BITMAP "..\\bmp\\clock_refresh_48_alpha.bmp"
 
 FOLDER BITMAP "..\\bmp\\gc_folder_open_16.bmp"
+GC_ARROW_DOWN_16 BITMAP "..\\bmp\\gc_arrow_down_16.bmp"
 BOT BITMAP "..\\bmp\\gc_arrow_down_16.bmp"
 BMPKIT BITMAP "..\\bmp\\gc_piece_16.bmp"
 GC_PIECE_12 BITMAP "..\\bmp\\gc_piece_12.bmp"
@@ -222,3 +223,7 @@ GC_MOTOR_SCOOTER_160 BITMAP "..\\bmp\\gc_motor_scooter_160.bmp"
 GC_SHOPPING_BASKET_160 BITMAP "..\\bmp\\gc_shopping_basket_160.bmp"
 GC_NOTEBOOK2_160 BITMAP "..\\bmp\\GC_NOTEBOOK2_160.bmp"
 GC_CASH_REGISTER_160 BITMAP "..\\bmp\\gc_cash_register_160.bmp"
+GC_CERTIFICATE_32 BITMAP "..\\bmp\\gc_certificate_32.bmp"
+GC_PIGGY_BANK_32 BITMAP "..\\bmp\\gc_piggy_bank_32.bmp"
+GC_LOCK2_32 BITMAP "..\\bmp\\gc_lock2_32.bmp"
+GC_SIGN_DOCUMENT_16 BITMAP "..\\bmp\\gc_sign_document_16.bmp"
