--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -227,3 +227,4 @@ GC_CERTIFICATE_32 BITMAP "..\\bmp\\gc_certificate_32.bmp"
 GC_PIGGY_BANK_32 BITMAP "..\\bmp\\gc_piggy_bank_32.bmp"
 GC_LOCK2_32 BITMAP "..\\bmp\\gc_lock2_32.bmp"
 GC_SIGN_DOCUMENT_16 BITMAP "..\\bmp\\gc_sign_document_16.bmp"
+GC_FOLDER_CUBES_48 BITMAP "..\\bmp\\gc_folder_cubes_48.bmp"
