--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -228,3 +228,6 @@ GC_PIGGY_BANK_32 BITMAP "..\\bmp\\gc_piggy_bank_32.bmp"
 GC_LOCK2_32 BITMAP "..\\bmp\\gc_lock2_32.bmp"
 GC_SIGN_DOCUMENT_16 BITMAP "..\\bmp\\gc_sign_document_16.bmp"
 GC_FOLDER_CUBES_48 BITMAP "..\\bmp\\gc_folder_cubes_48.bmp"
+GC_DATA_48 BITMAP "..\\bmp\\gc_data_48.bmp"
+GC_CASH_REGISTER_USER_48 BITMAP "..\\bmp\\gc_cash_register_user_48.bmp"
+GC_CASH_REGISTER_GIFT_48 BITMAP "..\\bmp\\gc_cash_register_gift_48.bmp"
