--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -231,3 +231,8 @@ GC_FOLDER_CUBES_48 BITMAP "..\\bmp\\gc_folder_cubes_48.bmp"
 GC_DATA_48 BITMAP "..\\bmp\\gc_data_48.bmp"
 GC_CASH_REGISTER_USER_48 BITMAP "..\\bmp\\gc_cash_register_user_48.bmp"
 GC_CASH_REGISTER_GIFT_48 BITMAP "..\\bmp\\gc_cash_register_gift_48.bmp"
+GC_CASH_REGISTER_DELETE_48 BITMAP "..\\bmp\\gc_cash_register_delete_48.bmp"
+GC_DOCUMENT_EMPTY_USER_48 BITMAP "..\\bmp\\gc_document_empty_user_48.bmp"
+GC_MONEY2_PLUS_32 BITMAP "..\\bmp\\gc_money2_plus_32.bmp"
+GC_GIFT_DISK_32 BITMAP "..\\bmp\\gc_gift_disk_32.bmp"
+GC_PRINTER2_DISK_32 BITMAP "..\\bmp\\GC_PRINTER2_DISK_32.bmp"
