--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -236,3 +236,5 @@ GC_DOCUMENT_EMPTY_USER_48 BITMAP "..\\bmp\\gc_document_empty_user_48.bmp"
 GC_MONEY2_PLUS_32 BITMAP "..\\bmp\\gc_money2_plus_32.bmp"
 GC_GIFT_DISK_32 BITMAP "..\\bmp\\gc_gift_disk_32.bmp"
 GC_PRINTER2_DISK_32 BITMAP "..\\bmp\\GC_PRINTER2_DISK_32.bmp"
+GC_QUESTION_48 BITMAP "..\\bmp\\gc_question_48.bmp"
+GC_CHECKS_32 BITMAP "..\\bmp\\gc_checks_32.bmp"
