--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -236,3 +236,4 @@ GC_DOCUMENT_EMPTY_USER_48 BITMAP "..\\bmp\\gc_document_empty_user_48.bmp"
 GC_MONEY2_PLUS_32 BITMAP "..\\bmp\\gc_money2_plus_32.bmp"
 GC_GIFT_DISK_32 BITMAP "..\\bmp\\gc_gift_disk_32.bmp"
 GC_PRINTER2_DISK_32 BITMAP "..\\bmp\\GC_PRINTER2_DISK_32.bmp"
+GC_PRINTER_OK2_64 BITMAP "..\\bmp\\gc_printer_ok2_64.bmp"
