--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -237,3 +237,6 @@ GC_MONEY2_PLUS_32 BITMAP "..\\bmp\\gc_money2_plus_32.bmp"
 GC_GIFT_DISK_32 BITMAP "..\\bmp\\gc_gift_disk_32.bmp"
 GC_PRINTER2_DISK_32 BITMAP "..\\bmp\\GC_PRINTER2_DISK_32.bmp"
 GC_PRINTER_OK2_64 BITMAP "..\\bmp\\gc_printer_ok2_64.bmp"
+GC_CABINET_OPEN_64 BITMAP "..\\bmp\\gc_cabinet_open_64.bmp"
+GC_CABINET_OPEN_32 BITMAP "..\\bmp\\gc_cabinet_open_32.bmp"
+GC_CABINET_OPEN_16 BITMAP "..\\bmp\\gc_cabinet_open_16.bmp"
