--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -238,3 +238,4 @@ GC_GIFT_DISK_32 BITMAP "..\\bmp\\gc_gift_disk_32.bmp"
 GC_PRINTER2_DISK_32 BITMAP "..\\bmp\\GC_PRINTER2_DISK_32.bmp"
 GC_QUESTION_48 BITMAP "..\\bmp\\gc_question_48.bmp"
 GC_CHECKS_32 BITMAP "..\\bmp\\gc_checks_32.bmp"
+GC_GESTOOLPRESTASHOP BITMAP "..\\bmp\\gc_Gestoolprestashop.bmp"
