--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -238,7 +238,11 @@ GC_GIFT_DISK_32 BITMAP "..\\bmp\\gc_gift_disk_32.bmp"
 GC_PRINTER2_DISK_32 BITMAP "..\\bmp\\GC_PRINTER2_DISK_32.bmp"
 GC_QUESTION_48 BITMAP "..\\bmp\\gc_question_48.bmp"
 GC_CHECKS_32 BITMAP "..\\bmp\\gc_checks_32.bmp"
+
 GC_GESTOOLPRESTASHOP BITMAP "..\\bmp\\gc_Gestoolprestashop.bmp"
+GESTOOLPRO BITMAP "..\\bmp\\Gestoolpro.bmp"
+GESTOOLSTANDARD BITMAP "..\\bmp\\Gestoolstandard.bmp"
+GESTOOLLITE BITMAP "..\\bmp\\Gestoollite.bmp"
 
 GC_PRINTER_OK2_64 BITMAP "..\\bmp\\gc_printer_ok2_64.bmp"
 GC_CABINET_OPEN_64 BITMAP "..\\bmp\\gc_cabinet_open_64.bmp"
