--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -249,3 +249,6 @@ GC_CABINET_OPEN_64 BITMAP "..\\bmp\\gc_cabinet_open_64.bmp"
 GC_CABINET_OPEN_32 BITMAP "..\\bmp\\gc_cabinet_open_32.bmp"
 GC_CABINET_OPEN_16 BITMAP "..\\bmp\\gc_cabinet_open_16.bmp"
 
+GC_ZOOM_IN_16 BITMAP "..\\bmp\\gc_zoom_in_16.bmp"
+GC_ZOOM_IN_32 BITMAP "..\\bmp\\gc_zoom_in_32.bmp"
+GC_ZOOM_IN_48 BITMAP "..\\bmp\\gc_zoom_in_48.bmp"
