--- a/resource/GstImageGC2.rc
+++ b/resource/GstImageGC2.rc
@@ -251,3 +251,4 @@ GC_ZOOM_IN_32 BITMAP "..\\bmp\\gc_zoom_in_32.bmp"
 GC_ZOOM_IN_48 BITMAP "..\\bmp\\gc_zoom_in_48.bmp"
 
 GC_SIGN_STOP_32 BITMAP "..\\bmp\\gc_sign_stop_32.bmp"
+GC_ID_CARD_DELETE_32 BITMAP "..\\bmp\\gc_id_card_delete_32.bmp"
