--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1861,18 +1861,18 @@ FONT 8, "MS Sans Serif"
   CONTROL "Procesos en curso", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 3, 0, 377, 177
 }
 
-ASS_EURO DIALOG DISCARDABLE 99, 25, 386, 296
+ASS_EURO DIALOG DISCARDABLE 99, 25, 431, 289
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Eliminar artículos sin movimientos"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "TPages", 110, "TPages", WS_TABSTOP, 1, 39, 383, 229
-  CONTROL "< &Anterior", 401, "Button", WS_TABSTOP, 224, 279, 50, 14
-  CONTROL "Siguien&te >", 402, "Button", WS_TABSTOP, 279, 279, 50, 14
-  CONTROL "&Cancelar", 403, "Button", WS_TABSTOP, 334, 279, 50, 14
-  CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 0, 1, 386, 34
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 1, 34, 385, 1
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 1, 273, 383, 1
+  CONTROL "TPages", 110, "TPages", WS_TABSTOP, 44, 29, 383, 229
+  CONTROL "< &Anterior", 401, "Button", WS_TABSTOP, 267, 269, 50, 14
+  CONTROL "Siguien&te >", 402, "Button", WS_TABSTOP, 322, 269, 50, 14
+  CONTROL "&Cancelar", 403, "Button", WS_TABSTOP, 377, 269, 50, 14
+  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 44, 263, 383, 1
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 1, 3, 34, 30
+  CONTROL "Durante este proceso se eliminarán definitivamente los artículos sin movimientos entre las fechas indicadas.", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 363, 21
 }
 
 ASS_EURO01 DIALOG DISCARDABLE 99, 64, 382, 232
@@ -4766,10 +4766,10 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_THICKFRAME|WS_CAPTION|WS_SYSMENU|WS_VI
 CAPTION "Apertura de sesión"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 0, 0, 365, 34
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 32, 398, 2
   CONTROL "", 100, "TAnimat", 0x00800000, 0, 45, 365, 8
   CONTROL "", 110, "Static", SS_CENTER|WS_GROUP, 0, 63, 365, 11
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 1, 3, 34, 30
+  CONTROL "Durante este proceso se generan todas las tablas de la nueva empresa.", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 266, 8
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
@@ -11770,10 +11770,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 258, 119, 50, 14
   CONTROL "A&yuda", 599, "Button", WS_TABSTOP, 313, 119, 50, 14
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 112, 364, 3
-  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 0, 0, 365, 34
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 32, 398, 2
   CONTROL "", 100, "TAnimat", 0x00800000, 0, 56, 364, 8
   CONTROL "", 110, "Static", SS_CENTER|WS_GROUP, 0, 78, 365, 11
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Este proceso invierte el cierre de la última sesión de trabajo.", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 259, 8
 }
 
 LAGETAR DIALOG DISCARDABLE 60, 102, 272, 70
