--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -1351,17 +1351,17 @@ FONT 24, "Segoe UI"
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 2, 2, 12, 10
 }
 
-FIDELITY DIALOG DISCARDABLE -30, -89, 368, 110
+FIDELITY DIALOG DISCARDABLE -30, -89, 311, 104
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Posee tarjeta de cliente"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", -1, "Button", BS_GROUPBOX, 4, 37, 360, 68
-  CONTROL "", 700, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 0, 0, 368, 32
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 32, 368, 2
-  CONTROL "SI", 500, "Button", WS_TABSTOP, 112, 50, 80, 50
-  CONTROL "No, pero deseo tenerla.", 510, "Button", BS_MULTILINE|WS_TABSTOP, 194, 50, 80, 50
-  CONTROL "Gracias, en otra ocasión.", IDCANCEL, "Button", BS_MULTILINE|WS_TABSTOP, 276, 50, 81, 50
+  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 29, 259, 68
+  CONTROL "SI", 500, "Button", WS_TABSTOP, 51, 42, 80, 50
+  CONTROL "No, pero deseo tenerla.", 510, "Button", BS_MULTILINE|WS_TABSTOP, 133, 42, 80, 50
+  CONTROL "Gracias, en otra ocasión.", IDCANCEL, "Button", BS_MULTILINE|WS_TABSTOP, 215, 42, 81, 50
+  CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Este proceso se utiliza para crear un plan de fidelización de clientes.", 200, "Static", WS_GROUP, 44, 3, 257, 10
 }
 
 BIG_TPV_RIGHT_1024X600 DIALOG DISCARDABLE 4, 47, 682, 341
