--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -18388,20 +18388,20 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 600, "TBitMap", 0x00800000, 0, 0, 270, 27
 }
 
-SQLCONNECT DIALOG DISCARDABLE 113, 122, 365, 160
+SQLCONNECT DIALOG DISCARDABLE 113, 122, 245, 124
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 222, 53, 129, 13
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 222, 75, 129, 13
-  CONTROL "", 250, "Edit", ES_PASSWORD|WS_BORDER|WS_TABSTOP, 222, 97, 129, 13
-  CONTROL "Servidor", 200, "Static", WS_GROUP, 161, 57, 48, 9, WS_EX_TRANSPARENT
-  CONTROL "Usuario", 220, "Static", WS_GROUP, 161, 79, 48, 9, WS_EX_TRANSPARENT
-  CONTROL "Contraseña", 240, "Static", WS_GROUP, 161, 101, 48, 9, WS_EX_TRANSPARENT
-  CONTROL "Conectar", 260, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 246, 129, 50, 14
-  CONTROL "&Cancelar", 270, "Button", WS_TABSTOP, 301, 129, 50, 14
-  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 0, 0, 365, 34
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 32, 398, 2
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 105, 25, 129, 13
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 105, 47, 129, 13
+  CONTROL "", 250, "Edit", ES_PASSWORD|WS_BORDER|WS_TABSTOP, 105, 69, 129, 13
+  CONTROL "Servidor", 200, "Static", WS_GROUP, 44, 29, 48, 9, WS_EX_TRANSPARENT
+  CONTROL "Usuario", 220, "Static", WS_GROUP, 44, 51, 48, 9, WS_EX_TRANSPARENT
+  CONTROL "Contraseña", 240, "Static", WS_GROUP, 44, 73, 48, 9, WS_EX_TRANSPARENT
+  CONTROL "Conectar", 260, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 129, 101, 50, 14
+  CONTROL "&Cancelar", 270, "Button", WS_TABSTOP, 184, 101, 50, 14
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Datos necesarios para la conexión con las bases de datos.", -1, "Static", WS_GROUP, 44, 3, 201, 10
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
